[gd_scene load_steps=4 format=3 uid="uid://bysptyiqqdl0f"]

[ext_resource type="Script" path="res://scripts/gameplay/building_creation/buy_building_button_content.gd" id="1_lbocx"]
[ext_resource type="Texture2D" uid="uid://dqpn44sihm61b" path="res://art/textures/icons/64/Coin.png" id="2_t5c5a"]
[ext_resource type="Texture2D" uid="uid://bl1stv7uc6qrf" path="res://art/textures/icons/64/ShieldLargeT2.png" id="3_8bsxm"]

[node name="BuyBuildingButtonContent" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
script = ExtResource("1_lbocx")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Name" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Building Name"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="CostRow" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Cost" type="Label" parent="VBoxContainer/CostRow"]
layout_mode = 2
text = "Cost"

[node name="GoldIcon" type="TextureRect" parent="VBoxContainer/CostRow"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("2_t5c5a")
expand_mode = 1
stretch_mode = 4

[node name="GoldLabel" type="Label" parent="VBoxContainer/CostRow"]
layout_mode = 2
text = "0"
horizontal_alignment = 2

[node name="DefenseIcon" type="TextureRect" parent="VBoxContainer/CostRow"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("3_8bsxm")
expand_mode = 1
stretch_mode = 4

[node name="DefenseLabel" type="Label" parent="VBoxContainer/CostRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
horizontal_alignment = 2

[node name="BenefitRow" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Benefit" type="Label" parent="VBoxContainer/BenefitRow"]
layout_mode = 2
text = "Benefit"

[node name="BenefitGoldIcon" type="TextureRect" parent="VBoxContainer/BenefitRow"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("2_t5c5a")
expand_mode = 1
stretch_mode = 4

[node name="BenefitGold" type="Label" parent="VBoxContainer/BenefitRow"]
layout_mode = 2
text = "0"
horizontal_alignment = 2

[node name="BenefitDefenseIcon" type="TextureRect" parent="VBoxContainer/BenefitRow"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("3_8bsxm")
expand_mode = 1
stretch_mode = 4

[node name="BenefitDefense" type="Label" parent="VBoxContainer/BenefitRow"]
layout_mode = 2
text = "0"
horizontal_alignment = 2

[node name="TurnRow" type="HBoxContainer" parent="VBoxContainer"]
clip_contents = true
layout_mode = 2

[node name="BenefitTurn" type="Label" parent="VBoxContainer/TurnRow"]
layout_mode = 2
text = "Benefit/Turn"

[node name="BenefitTurnGoldIcon" type="TextureRect" parent="VBoxContainer/TurnRow"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("2_t5c5a")
expand_mode = 1
stretch_mode = 4

[node name="BenefitTurnGold" type="Label" parent="VBoxContainer/TurnRow"]
layout_mode = 2
text = "0
"
horizontal_alignment = 2

[node name="BenefitTurnDefenseIcon" type="TextureRect" parent="VBoxContainer/TurnRow"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("3_8bsxm")
expand_mode = 1
stretch_mode = 4

[node name="BenefitTurnDefense" type="Label" parent="VBoxContainer/TurnRow"]
layout_mode = 2
text = "0"
horizontal_alignment = 2

[node name="RequiredBuildings" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Build" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Build"
